<resources>
    <string name="app_name">Market4me</string>
    <string name="app_name2">market4me</string>
    <string name="hint_title">Título</string>
    <string name="hint_people">Personas</string>
    <string name="hint_time">Tiempo</string>
    <string name="hint_ingredient">Ingrediente</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="hint_preparation">Pon tus notas o la preparación aquí</string>
    <string name="saveButton">Guardar</string>
    <string name="search">Buscar</string>

    <string name="title_error">Elige un título</string>
    <string name="people_error">Elige el número de personas</string>
    <string name="time_error">Elige la duración</string>
    <string name="ingredient0_error">Elige un ingrediente</string>
    <string name="quantity0_error">Elige la cantidad</string>
    <string name="no_camera_error">El dispositivo no tiene cámara</string>
    <string name="recipe_list_title">Mis Recetas</string>
    <string name="new_recipe_title">Nueva Receta</string>
    <string name="recipe_deleted_snackbar">Receta eliminada</string>

    <string name="nav_lista_recetas">Recetas</string>
    <string name="nav_contact">Contacto</string>
    <string name="nav_about">Acerca de</string>
    <string name="options">Opciones</string>
    <string name="nav_options">Opciones</string>
    <string name="share">Compartir</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="sign_in_cancelled">Proceso cancelado</string>
    <string name="no_internet_connection">No se ha detectado conexión a internet</string>
    <string name="unknown_error">Error inesperado</string>
    <string name="signed_out_successfully">Ha cerrado sesión satisfactoriamente</string>

    <string name="search_hint">Búsqueda rápida</string>
    <string name="hint_ingredients">Ingredientes</string>
    <string name="instructions">Instrucciones</string>
    <string name="edit">Editar</string>
    <string name="home_header_title">¿Qué comemos hoy?</string>
    <string name="imagen_opcion_1">Imagen opción 1</string>
    <string name="imagen_opcion_2">imagen opción 2</string>
    <string name="home_card1_title">Receta</string>
    <string name="home_card1_desc">Crea una nueva receta</string>
    <string name="home_card2_title">Lista</string>
    <string name="home_card2_desc">Consulta tus recetas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="sign">Iniciar sesión</string>
    <string name="home">Inicio</string>

    <string-array name="quantity_units">
        <item>Kg</item>
        <item>g</item>
        <item>l</item>
        <item>ml</item>
        <item>other</item>
    </string-array>


</resources>
