<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item

            android:id="@+id/nav_new_recipe"
            android:icon="@drawable/ic_add"
            android:title="@string/new_recipe_title"
            app:iconTint="@color/grey_description_card_home" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_lista_recetas"
            app:iconTint="@color/grey_description_card_home" />

    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_options" />
        </menu>
    </item>

</menu>